--- a/systray.qrc
+++ b/systray.qrc
@@ -1,7 +1,9 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource prefix="/">
-   <file>images/bad.png</file>
-   <file>images/heart.png</file>
-   <file>images/trash.png</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>images/bad.png</file>
+        <file>images/heart.png</file>
+        <file>images/trash.png</file>
+        <file>images/applications-games.svg</file>
+        <file>images/applications-all.svg</file>
+    </qresource>
 </RCC>
